--- a/config/env.template
+++ b/config/env.template
@@ -23,6 +23,17 @@ DATABASE_URL=your_database_url_here
 CACHE_TTL=3600
 CACHE_MAX_SIZE=1000
 
+# Redis (Optional - Upstash REST)
+# If provided, product caches will use Redis instead of native addon
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
+
+# Redis (TCP client)
+REDIS_HOST=
+REDIS_PORT=
+REDIS_USERNAME=default
+REDIS_PASSWORD=
+
 # File Upload Configuration
 MAX_FILE_SIZE=5242880
 ALLOWED_FILE_TYPES=image/jpeg,image/png,image/webp
