--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "fix-all": "npm run lint:fix && npm run format",
     "sync-env": "node sync-env.js",
     "clean": "rm -rf node_modules .next",
-    "prepare": "npx husky install"
+    "prepare": "npx husky install",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@supabase/ssr": "^0.5.1",
@@ -32,9 +35,13 @@
     "levenshtein": "^1.0.5",
     "lucide-react": "^0.460.0",
     "next": "15.5.4",
+    "node-addon-api": "^8.5.0",
     "node-cron": "^4.2.1",
+    "ipaddr.js": "^2.1.0",
+    "validator": "^13.12.0",
     "react": "^18",
     "react-dom": "^18",
+    "redis": "^5.8.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -43,6 +50,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
+    "@vitest/coverage-v8": "^2.1.9",
     "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
@@ -56,7 +64,8 @@
     "lint-staged": "^16.2.4",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^2.1.9"
   },
   "engines": {
     "node": ">=18.0.0",
