--- a/config/env.template
+++ b/config/env.template
@@ -3,6 +3,10 @@ NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url_here
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
+# NextAuth Configuration
+NEXTAUTH_SECRET=your_nextauth_secret_here
+NEXTAUTH_URL=http://localhost:3000
+
 # Custom JWT Secret (for our custom JWT implementation)
 # This is separate from Supabase's internal JWT handling
 # Generate with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
