--- a/package.json
+++ b/package.json
@@ -28,21 +28,22 @@
     "@types/jsonwebtoken": "^9.0.10",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.3",
     "express-validator": "^7.2.0",
     "fast-levenshtein": "^3.0.0",
+    "ipaddr.js": "^2.1.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "levenshtein": "^1.0.5",
     "lucide-react": "^0.460.0",
     "next": "15.5.4",
+    "next-auth": "^4.24.11",
     "node-addon-api": "^8.5.0",
     "node-cron": "^4.2.1",
-    "ipaddr.js": "^2.1.0",
-    "validator": "^13.12.0",
     "react": "^18",
     "react-dom": "^18",
     "redis": "^5.8.3",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -50,7 +51,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
-    "@vitest/coverage-v8": "^2.1.9",
+    "@vitest/coverage-v8": "^3.2.4",
     "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
@@ -65,7 +66,7 @@
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.0",
     "typescript": "^5",
-    "vitest": "^2.1.9"
+    "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=18.0.0",
