--- a/package.json
+++ b/package.json
@@ -22,18 +22,14 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@casl/ability": "^6.7.3",
+    "@casl/react": "^5.0.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.10",
     "autoprefixer": "^10.4.21",
-    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
-    "express-validator": "^7.2.0",
     "fast-levenshtein": "^3.0.0",
     "ipaddr.js": "^2.1.0",
-    "jose": "^6.1.0",
-    "jsonwebtoken": "^9.0.2",
     "levenshtein": "^1.0.5",
     "lucide-react": "^0.460.0",
     "next": "15.5.4",
@@ -43,6 +39,7 @@
     "react": "^18",
     "react-dom": "^18",
     "redis": "^5.8.3",
+    "styled-components": "^6.1.19",
     "zod": "^3.25.76"
   },
   "devDependencies": {
