Fix hardcoded email: Use environment variable for owner email
- Replace hardcoded 'jtovalin10@gmail.com' with NEXT_PUBLIC_OWNER_EMAIL env var
- Add NEXT_PUBLIC_OWNER_EMAIL to env.template
- Make owner role assignment configurable
- Update TODO.md to reflect completed RLS fixes

--- a/config/env.template
+++ b/config/env.template
@@ -20,6 +20,9 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_APP_NAME=SupplementIQ
 FRONTEND_URL=http://localhost:3000
 
+# Owner Configuration
+NEXT_PUBLIC_OWNER_EMAIL=your_owner_email_here
+
 # Database Configuration
 DATABASE_URL=your_database_url_here
 
