Optimize RankingTable with useMemo and prevent duplicate API calls
- Replace useEffect with useMemo for better performance
- Add local cache with useRef to prevent duplicate requests
- Implement retryFetch function for error handling
- Eliminate React dependency warnings and double API calls
- Improve rendering performance with memoized cache key
- Fix fetchRankings reference error in retry button
- Reduce renders from 2 to 1 for cached data

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "^10.4.21",
     "dotenv": "^17.2.3",
     "fast-levenshtein": "^3.0.0",
+    "ioredis": "^5.8.2",
     "ipaddr.js": "^2.1.0",
     "levenshtein": "^1.0.5",
     "lucide-react": "^0.460.0",
