--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@casl/react": "^5.0.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
+    "@types/js-cookie": "^3.0.6",
     "autoprefixer": "^10.4.21",
     "dotenv": "^17.2.3",
     "fast-levenshtein": "^3.0.0",
     "ioredis": "^5.8.2",
     "ipaddr.js": "^2.1.0",
+    "js-cookie": "^3.0.5",
     "levenshtein": "^1.0.5",
     "lucide-react": "^0.460.0",
     "next": "15.5.4",
