Fix admin submission review UI and ingredient form
- Remove add to cart button and discount badge from ProductDisplay
- Remove hardcoded reviews, use dynamic data from database
- Make all text black for better readability
- Remove interest payments from pricing section
- Remove multiple image carousel, keep single image display
- Add image URL management (add/update/remove) for admin review
- Create IngredientReviewForm component matching add product structure
- Update ingredient configuration for creatine products
- Add proper error handling for missing ingredient data
- Update review instructions to focus on accuracy verification
- Add API logging for debugging database queries
- Fix category mapping for appetite suppressants to use fat_burner_details

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "js-cookie": "^3.0.5",
     "levenshtein": "^1.0.5",
     "lucide-react": "^0.460.0",
-    "next": "15.5.4",
+    "next": "^16.0.0-canary.18",
     "next-auth": "^4.24.11",
     "node-addon-api": "^8.5.0",
     "node-cron": "^4.2.1",
