feat: Complete product review system overhaul
- Convert from ID-based to slug-based routing for better SEO
- Add comprehensive image management with add/remove/preview functionality
- Implement detailed dosage information display for all product categories
- Simplify ImageManager component by removing redundant preview mode
- Update slug generation to include brand name, product name, and year
- Add ProductDosageDetails component with category-specific ingredient mappings
- Refactor ProductDisplay to use reusable components
- Update API routes to handle Next.js 16 params as Promise
- Fix database queries to use proper integer conversion for foreign keys
- Add comprehensive DOSAGE_MAPPINGS for all product categories
- Update pending submissions API to include slug information
- Improve error handling and validation throughout the system

Breaking Changes:
- Product review URLs now use slugs instead of numeric IDs
- Slug format changed from 'product-name' to 'brand-name-product-name-year'
- ImageManager workflow simplified to direct application without preview step

--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
     "fix-all": "npm run lint:fix && npm run format",
     "sync-env": "node sync-env.js",
     "clean": "rm -rf node_modules .next",
-    "prepare": "npx husky install",
+    "prepare": "husky",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@casl/ability": "^6.7.3",
-    "@casl/react": "^5.0.0",
+    "@jridgewell/gen-mapping": "^0.3.5",
     "@supabase/ssr": "^0.5.1",
-    "@supabase/supabase-js": "^2.45.4",
-    "@types/js-cookie": "^3.0.6",
     "autoprefixer": "^10.4.21",
+    "caniuse-lite": "^1.0.30001565",
     "dotenv": "^17.2.3",
     "fast-levenshtein": "^3.0.0",
+    "fill-range": "^7.0.1",
+    "glob-parent": "^6.0.2",
     "ioredis": "^5.8.2",
     "ipaddr.js": "^2.1.0",
     "js-cookie": "^3.0.5",
@@ -45,6 +45,7 @@
     "redis": "^5.8.3",
     "redis-errors": "^1.2.0",
     "styled-components": "^6.1.19",
+    "tr46": "^3.0.0",
     "webidl-conversions": "^8.0.0",
     "zod": "^3.25.76"
   },
