--- a/package.json
+++ b/package.json
@@ -22,32 +22,15 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@jridgewell/gen-mapping": "^0.3.5",
     "@supabase/ssr": "^0.5.1",
     "autoprefixer": "^10.4.21",
     "caniuse-lite": "^1.0.30001565",
-    "dotenv": "^17.2.3",
     "fast-levenshtein": "^3.0.0",
-    "fill-range": "^7.0.1",
-    "glob-parent": "^6.0.2",
     "ioredis": "^5.8.2",
-    "ipaddr.js": "^2.1.0",
-    "js-cookie": "^3.0.5",
-    "levenshtein": "^1.0.5",
     "lucide-react": "^0.460.0",
-    "nanoid": "^5.1.6",
-    "next": "^16.0.0-canary.18",
-    "node-addon-api": "^8.5.0",
-    "node-cron": "^4.2.1",
-    "picocolors": "^1.1.1",
+    "next": "^15.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "redis": "^5.8.3",
-    "redis-errors": "^1.2.0",
-    "source-map-js": "^1.2.1",
-    "styled-components": "^6.1.19",
-    "tr46": "^3.0.0",
-    "webidl-conversions": "^8.0.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -57,7 +40,6 @@
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
     "@vitest/coverage-v8": "^3.2.4",
-    "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "eslint-config-prettier": "^10.1.8",
